--- a/index.html
+++ b/index.html
@@ -120,7 +120,11 @@
         "方块娱乐",
         "天蝎国际",
         "梅花娱乐",
-        "摩羯娱乐"
+        "摩羯娱乐",
+        "水瓶国际",
+        "宝宝娱乐",
+        "魔兽世界",
+        "谷雨国际"
       ],
       redPlatform: [
         "鼎华娱乐",
