--- a/activity/index.html
+++ b/activity/index.html
@@ -185,15 +185,16 @@
             table: {
               th: ["排名", "奖励金额"],
               td: [
-                ["第一名", "1888"],
+                ["第一名", "1288"],
                 ["第二名", "888"],
                 ["第三名", "588"],
                 ["第四名", "388"],
-                ["第五名", "188"],
-                ["第六名~第十名", "58"],
+                ["第五名", "288"],
+                ["第六名","188"],
+                ["第七名~第十名", "58"],
               ],
             },
-            tableComment: '注：每日新增有效直属会员最低8人的代理可以参与领取奖金。',
+            tableComment: '注：每日新增有效直属会员最低5人的代理可以参与领取奖金。',
             rule: [
               {
                 title: "活动规则",
@@ -203,7 +204,7 @@
                   "●例2：B代理直属会员B1在2023年12月29注册，但是在2023年12月30日充值300元则算在2023年12月30日名额。",
                   "注：以上排行是新增会员，老会员充值不计入名额。",
                   "2.若排行榜中出现新增有效直属会员数相同的情况，则需参考总存款金额的高低依次进行排名。",
-                  "3.奖金会在每日凌晨00:30自动派发，请注意查收站内邮件。",
+                  "3.奖金会在每日凌晨01:00自动派发，请注意查收站内邮件。",
                   "4.奖金需3倍流水即可提现。",
                   "5.此优惠仅限电子/捕鱼使用，若游戏其他游戏将扣除全部额度。",
                   "6.同IP/同姓名/同手机号/多账户充值只算做一个名额，若发现任何团队或个人以不正当方式套利，将永久封号处理。"
@@ -777,7 +778,7 @@
                 title: "活动规则",
                 text: [
                   "1.将按照所有会员在UG电子当日产生的全部投注额按照一定比例计算出累积奖金。<br/>&nbsp;&nbsp;&nbsp;1）若奖金总数低于1500元，结算发放将按照保底奖金派发。<br/>&nbsp;&nbsp;&nbsp;2）若奖金总数高于1500元，则按照奖金比例所对应的实际数值派发，无上限。",
-                  "2.奖金会在每日凌晨00:30自动派发，请注意查收站内邮件。",
+                  "2.奖金会在每日凌晨01:00自动派发，请注意查收站内邮件。",
                   "3.奖金需三倍流水即可提现。",
                   "4.此优惠仅限UG电子使用。",
                   "5.发现任何团队或个人以不正当方式套利，将永久封号处理。",
