--- a/dfw_watermark/index.html
+++ b/dfw_watermark/index.html
@@ -16,8 +16,7 @@
     <div id="content">
       <div class="item" v-for="item in images">
         <div>
-          <img src="logo.png" alt="">
-          <img src="logo.png" alt="">
+          <img v-for="item in 3" src="logo.png">
         </div>
         <img class="bg" :src="item.currentSrc" alt="">
       </div>
@@ -59,6 +58,7 @@
               link.href = imgData;
               link.download = '水印.png';
               link.click();
+              console.log('保存');
             });
           });
         }, 500);
