--- a/dfw_watermark/index.html
+++ b/dfw_watermark/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id="app">
-    <input type="file" id="fileInput" multiple>
+    <input type="file" id="fileInput" multiple accept="image/*">
     <div id="content">
       <div class="item" v-for="item in images">
         <div>
