--- a/watermark/index.html
+++ b/watermark/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="app">
     <div class="top">
-      <button class="platfromSelect">
+      <button class="platfromSelect" @mouseover="clearData()">
         <p>{{platfromList[selected]}}</p>
         <div class="logo">
           <img @click="selected = index" v-for="(item, index) in platfromList" :src="`img/${platfromList[index]}.png`">
@@ -86,10 +86,8 @@
             });
           });
         }, 500);
-      }
-    },
-    watch: {
-      selected(newVal) {
+      },
+      clearData() {
         this.images = []
         document.getElementById('fileInput').value = ''
       }
