--- a/tb_invoice/index.html
+++ b/tb_invoice/index.html
@@ -97,7 +97,8 @@
         3.左侧按钮切换显示[中英]/[全英文]。<br>
         4.打开页面、刷新页面、保存账单操作都可以将光标激活到客户输入口。<br>
         5.一个输入完成后Tab切换到下一个输入，商户ID输入后Tab焦点会到公平游戏复选框上，空格会取消选择这个类型并消失，同样公平游戏的条件输入框Tab可以空格取消显示电子游戏。<br>
-        6.输入完成后检查计算结果准确性，回车将账单保存到电脑，并同时清空客户、商户ID、公平游戏、电子游戏投注额数据，并获取到客户名称输入框，以便继续输入下一个客户。
+        6.输入完成后检查计算结果准确性，回车将账单保存到电脑，并同时清空客户、商户ID、公平游戏、电子游戏投注额数据，并获取到客户名称输入框，以便继续输入下一个客户。<br>
+        7.开发过程中踩了JavaScript浮点运算精度的坑，问题已解决，但使用初期务必检查计算准确性，有问题请及时反馈。
       </p>
     </div>
     <!-- <div class="control">
