--- a/tb_invoice/index.html
+++ b/tb_invoice/index.html
@@ -93,7 +93,7 @@
       <h4>使用说明：</h4>
       <p>
         1.下方输入客户信息的投注额、派彩额、条件、汇率单位、汇率后自动计算结果。<br>
-        2.类型默认两个都选择，取消勾选，则会消失，刷新页面后重置。<br>
+        2.类型默认两个都选择，取消勾选，则会消失，刷新页面或保存账单后重置。<br>
         3.左侧按钮切换显示[中英]/[全英文]。<br>
         4.打开页面、刷新页面、保存账单操作都可以将光标激活到客户输入口。<br>
         5.一个输入完成后Tab切换到下一个输入，商户ID输入后Tab焦点会到公平游戏复选框上，空格会取消选择这个类型并消失，同样公平游戏的条件输入框Tab可以空格取消显示电子游戏。<br>
